K8S/advanced/network-policy/01-mysql-client-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-client-allowed
  labels:
   role: frontend
spec:
      containers:
      - name: mysql
        image: mysql:5.7
        args: ["sleep", "36000"]
        ports:
        - name: mysql-port
          containerPort: 3306
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-client-blocked
  labels:
   role: other
spec:
      containers:
      - name: mysql
        image: mysql:5.7
        args: ["sleep", "36000"]
        ports:
        - name: mysql-port
          containerPort: 3306
