K8S/advanced/network-policy/00-mysql-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      role: mysql
  template:
    metadata:
      labels:
        role: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - name: mysql-port
          containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysqlsvc
spec:
  ports:
  - port: 3306
    targetPort: mysql-port
    protocol: TCP
  selector:
    role: mysql
